--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
       <artifactId>jboss-logging</artifactId>
       <version>3.1.0.GA</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>SpringMVCTest</finalName>
